# rustTry

./: Cargo.toml
resources/: application.toml
src/: configuration.rs  lib.rs  main.rs
src/application/: mod.rs  route.rs
src/application/model/: request.rs
