[package]
name = "rustTry"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
deadpool = "0.12.1"
deadpool-postgres = "0.14"
postgres = "0.19.8"
config = "0.14"
dotenv = "0.15"
tokio-tungstenite = "0.23.1"
tungstenite = "0.24.0"
hyper-tungstenite = "0.14.0"
futures = "0.3.30"